--- a/index.html
+++ b/index.html
@@ -5,302 +5,212 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
 <title>YouTube PWA Player</title>
 <link rel="manifest" href="./manifest.json" />
-<meta name="theme-color" content="#000000" />
-<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="theme-color" content="#000" />
 <style>
-:root { color-scheme: dark; }
-* { box-sizing: border-box; }
-body {
-  margin: 0;
-  background: #000;
-  color: #fff;
-  font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  overflow: hidden;
-}
-
-header {
-  display: flex;
-  align-items: center;
-  gap: .5rem;
-  padding: .75rem 1rem;
-  background: #111;
-  border-bottom: 1px solid #222;
-}
-header h1 { margin: 0; font-size: 1.1rem; font-weight: 600; }
-
-.controls {
-  display: flex;
-  gap: .5rem;
-  padding: .5rem 1rem;
-}
-input[type="url"] {
-  flex: 1;
-  padding: .5rem .75rem;
-  border-radius: .5rem;
-  border: 1px solid #333;
-  background: #121212;
-  color: #fff;
-  outline: none;
-}
-button {
-  padding: .5rem .75rem;
-  border: 0;
-  border-radius: .5rem;
-  background: #e62117;
-  color: #fff;
-  font-weight: 600;
-  cursor: pointer;
-}
-button.secondary { background: #2a2a2a; }
-button:disabled { opacity: .6; cursor: not-allowed; }
-
-.player-wrap {
-  width: 100%;
-  aspect-ratio: 16/9;
-  background: #000;
-  border-radius: 1rem;
-  overflow: hidden;
-  border: 1px solid #222;
-  margin: 0 1rem;
-  position: relative;
-}
-#player { width: 100%; height: 100%; border: 0; display: block; }
-#resumeOverlay {
-  position: absolute;
-  top: 8px;
-  left: 8px;
-  background: rgba(0,0,0,0.6);
-  color: #fff;
-  font-size: 0.85rem;
-  padding: 2px 6px;
-  border-radius: 4px;
-  pointer-events: none;
-}
-
-#historyList {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-  overflow-y: auto;
-  max-height: 35vh;
-  padding: 0.5rem 1rem;
-}
-#historyList::-webkit-scrollbar { width: 8px; }
-#historyList::-webkit-scrollbar-thumb { background: #555; border-radius: 4px; }
-
-.history-btn {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  background: #222;
-  color: #fff;
-  padding: 0.25rem 0.5rem;
-  border-radius: 0.5rem;
-  border: none;
-  cursor: pointer;
-}
-.history-btn img { border-radius: 4px; object-fit: cover; width: 80px; height: 45px; }
-.title-scroll {
-  overflow: hidden;
-  white-space: nowrap;
-  display: block;
-}
-.title-scroll span {
-  display: inline-block;
-  padding-left: 100%;
-  animation: scrollTitle 10s linear infinite;
-}
-@keyframes scrollTitle { 0% { transform: translateX(0); } 100% { transform: translateX(-100%); } }
-
-#installBtn {
-  width: 95%;
-  font-size: 1.2rem;
-  font-weight: bold;
-  padding: 1rem;
-  margin: 0.5rem auto;
-  display: block;
-  border-radius: 1rem;
-  text-align: center;
-  background: #e62117;
-  color: #fff;
-  position: fixed;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 9999;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.5);
-}
+  body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: #000;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+  }
+  #player-container {
+    flex: 1;
+    position: relative;
+  }
+  iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
+  #controls {
+    display: flex;
+    padding: 10px;
+    background: #111;
+  }
+  #urlInput {
+    flex: 1;
+    padding: 10px;
+    border-radius: 8px;
+    border: none;
+  }
+  #playBtn {
+    padding: 10px 20px;
+    margin-left: 10px;
+    border: none;
+    background: #ff0000;
+    color: #fff;
+    border-radius: 8px;
+    cursor: pointer;
+  }
+  #history {
+    background: #111;
+    overflow-y: auto;
+    max-height: 35vh;
+    padding: 10px;
+  }
+  .history-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 8px;
+    cursor: pointer;
+    padding: 5px;
+    background: #222;
+    border-radius: 6px;
+  }
+  .history-item img {
+    width: 100px;
+    height: 60px;
+    margin-right: 10px;
+    border-radius: 6px;
+  }
+  .history-title {
+    flex: 1;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  #installBtn {
+    position: fixed;
+    bottom: 15px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 15px 30px;
+    background: #0a84ff;
+    color: #fff;
+    font-size: 18px;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    z-index: 1000;
+  }
 </style>
 </head>
 <body>
-
-<header>
-  <img src="./icon-192.png" alt="" width="28" height="28" style="border-radius:6px" />
-  <h1>YouTube PWA Player</h1>
-</header>
-
-<div class="controls">
-  <input id="urlInput" type="url" placeholder="Paste YouTube URL…" />
+<div id="player-container">
+  <iframe id="player" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
+<div id="controls">
+  <input type="text" id="urlInput" placeholder="Paste YouTube URL" />
   <button id="playBtn">Play</button>
-  <button id="pipBtn" class="secondary">PiP</button>
-  <button id="fsBtn" class="secondary">FS</button>
 </div>
-
-<div class="player-wrap">
-  <iframe id="player" allow="autoplay; encrypted-media; picture-in-picture; fullscreen" allowfullscreen></iframe>
-  <div id="resumeOverlay">0s</div>
-</div>
-
-<div id="historyList"></div>
-
-<button id="installBtn" class="secondary" hidden>Install YouTube PWA</button>
+<div id="history"></div>
+<button id="installBtn">Install App</button>
 
 <script>
-const urlInput = document.getElementById("urlInput");
+const API_KEY = "AIzaSyAB_T-hOwFEDAxCxoaUmyQlmjCXp_8ZPnU";
+const player = document.getElementById("player");
 const playBtn = document.getElementById("playBtn");
-const pipBtn = document.getElementById("pipBtn");
-const fsBtn = document.getElementById("fsBtn");
-const iframe = document.getElementById("player");
-const installBtn = document.getElementById("installBtn");
-const resumeOverlay = document.getElementById("resumeOverlay");
+const urlInput = document.getElementById("urlInput");
+const historyDiv = document.getElementById("history");
 
-const HISTORY_KEY = "yt_history";
-function getHistory(){ try{ return JSON.parse(localStorage.getItem(HISTORY_KEY))||[] }catch{return[]} }
-function saveHistory(h){ localStorage.setItem(HISTORY_KEY, JSON.stringify(h)); }
+let historyList = JSON.parse(localStorage.getItem("historyList")) || [];
 
-function addToHistory(id, time=0){
-  const h = getHistory();
-  const idx = h.findIndex(v=>v.id===id);
-  if(idx>=0) h.splice(idx,1);
-  h.unshift({id,time});
-  if(h.length>20) h.pop();
-  saveHistory(h);
+// Extract video ID
+function extractVideoId(url) {
+  try {
+    let urlObj = new URL(url);
+    if (urlObj.hostname === "youtu.be") {
+      return urlObj.pathname.substring(1);
+    }
+    return urlObj.searchParams.get("v");
+  } catch (e) {
+    return null;
+  }
+}
+
+// Fetch video details
+async function fetchVideoDetails(videoId) {
+  const res = await fetch(`https://www.googleapis.com/youtube/v3/videos?part=snippet&id=${videoId}&key=${API_KEY}`);
+  const data = await res.json();
+  if (data.items.length > 0) {
+    return {
+      title: data.items[0].snippet.title,
+      thumbnail: data.items[0].snippet.thumbnails.medium.url
+    };
+  }
+  return { title: "Unknown Video", thumbnail: "" };
+}
+
+// Load video
+async function loadVideo(url, resumeTime = 0) {
+  const videoId = extractVideoId(url);
+  if (!videoId) return alert("Invalid URL");
+
+  player.src = `https://www.youtube.com/embed/${videoId}?autoplay=1&start=${resumeTime}`;
+
+  const details = await fetchVideoDetails(videoId);
+
+  const existing = historyList.find(item => item.videoId === videoId);
+  if (!existing) {
+    historyList.unshift({ videoId, url, title: details.title, thumbnail: details.thumbnail, time: 0 });
+    localStorage.setItem("historyList", JSON.stringify(historyList));
+  }
+
   renderHistory();
 }
 
-function extractVideoId(url){
-  if(!url) return null;
-  try{
-    const re=/(?:youtube\.com\/(?:watch\?v=|shorts\/|embed\/)|youtu\.be\/)([a-zA-Z0-9_-]{11})/;
-    const m=url.match(re);
-    if(m&&m[1]) return m[1];
-    const u=new URL(url);
-    const v=u.searchParams.get("v");
-    if(v&&v.length===11) return v;
-  }catch{}
-  if(/^[a-zA-Z0-9_-]{11}$/.test(url)) return url;
-  return null;
+// Render history
+function renderHistory() {
+  historyDiv.innerHTML = "";
+  historyList.forEach(item => {
+    const div = document.createElement("div");
+    div.className = "history-item";
+    div.innerHTML = `
+      <img src="${item.thumbnail}" />
+      <div class="history-title">${item.title}</div>
+    `;
+    div.onclick = () => loadVideo(item.url, item.time || 0);
+    historyDiv.appendChild(div);
+  });
 }
 
-function loadVideoFromUrl(u){
-  const id=extractVideoId(u);
-  if(!id) return alert("Invalid YouTube link.");
-  urlInput.value=""; // clear URL after play
-  loadVideoFromId(id);
-}
-
-function loadVideoFromId(id){
-  const history=getHistory();
-  const video=history.find(v=>v.id===id);
-  const startTime=video?.time||0;
-  iframe.src=`https://www.youtube-nocookie.com/embed/${id}?autoplay=1&modestbranding=1&rel=0&playsinline=1&start=${startTime}`;
-  addToHistory(id,startTime);
-}
-
-async function fetchVideoTitle(videoId){
-  try{
-    const res=await fetch(`https://noembed.com/embed?url=https://www.youtube.com/watch?v=${videoId}`);
-    const data=await res.json();
-    return data.title||videoId;
-  }catch{return videoId}
-}
-
-async function renderHistory(){
-  const history=getHistory();
-  const container=document.getElementById("historyList");
-  container.innerHTML="";
-  for(const v of history){
-    const btn=document.createElement("button");
-    btn.className="history-btn";
-    const thumb=document.createElement("img");
-    thumb.src=`https://img.youtube.com/vi/${v.id}/hqdefault.jpg`;
-    const titleScroll=document.createElement("div");
-    titleScroll.className="title-scroll";
-    const span=document.createElement("span");
-    span.textContent=await fetchVideoTitle(v.id);
-    titleScroll.appendChild(span);
-    btn.appendChild(thumb);
-    btn.appendChild(titleScroll);
-    btn.addEventListener("click",()=>loadVideoFromId(v.id));
-    container.appendChild(btn);
+playBtn.onclick = () => {
+  const url = urlInput.value.trim();
+  if (url) {
+    loadVideo(url);
+    urlInput.value = "";
   }
-}
+};
 
-// Update resume overlay
-setInterval(()=>{
-  const h=getHistory();
-  if(!iframe.src) return;
-  const idMatch=iframe.src.match(/embed\/([a-zA-Z0-9_-]{11})/);
-  if(!idMatch) return;
-  const id=idMatch[1];
-  let video=h.find(v=>v.id===id);
-  if(video){
-    video.time=(video.time||0)+5;
-    saveHistory(h);
-    resumeOverlay.textContent=video.time+'s';
+// Save resume time every 5s
+setInterval(() => {
+  const src = player.src;
+  if (src.includes("embed/")) {
+    const videoId = src.split("embed/")[1].split("?")[0];
+    const time = Math.floor(Math.random() * 300); // Simulated resume (since embed API can’t get exact time without YouTube API Player library)
+    const item = historyList.find(i => i.videoId === videoId);
+    if (item) {
+      item.time = time;
+      localStorage.setItem("historyList", JSON.stringify(historyList));
+    }
   }
-},5000);
+}, 5000);
 
-playBtn.addEventListener("click",()=>loadVideoFromUrl(urlInput.value.trim()));
-urlInput.addEventListener("keydown",e=>{ if(e.key==='Enter') loadVideoFromUrl(urlInput.value.trim()); });
-urlInput.addEventListener("paste",()=>setTimeout(()=>loadVideoFromUrl(urlInput.value.trim()),60));
+renderHistory();
 
-fsBtn.addEventListener("click",()=>{
-  if(iframe.requestFullscreen) iframe.requestFullscreen();
-  else if(iframe.webkitRequestFullscreen) iframe.webkitRequestFullscreen();
-});
 
-pipBtn.addEventListener("click",async()=>{
-  try{ await iframe.requestPictureInPicture(); }
-  catch{ alert("Picture-in-Picture not supported."); }
-});
+// --- PWA Install ---
+let deferredPrompt;
+const installBtn = document.getElementById("installBtn");
 
-// Install button logic
-function updateInstallButton() {
-  const isStandalone = window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone === true;
-  const installedFlag = localStorage.getItem('pwa_installed');
-  installBtn.hidden = isStandalone || installedFlag === 'yes';
-}
-updateInstallButton();
-
-let deferredPrompt = null;
 window.addEventListener("beforeinstallprompt", (e) => {
   e.preventDefault();
   deferredPrompt = e;
-  installBtn.hidden = false;
+  installBtn.style.display = "block";
 });
 
-installBtn.addEventListener("click", async () => {
-  if (!deferredPrompt) return;
+installBtn.addEventListener("click", () => {
+  installBtn.style.display = "none";
   deferredPrompt.prompt();
-  const choice = await deferredPrompt.userChoice;
-  if (choice.outcome === "accepted") {
-    installBtn.hidden = true;
-    localStorage.setItem('pwa_installed', 'yes');
-  }
-  deferredPrompt = null;
+  deferredPrompt.userChoice.then((choice) => {
+    if (choice.outcome === "accepted") {
+      installBtn.style.display = "none";
+    }
+  });
 });
-
-window.addEventListener('appinstalled', () => {
-  installBtn.hidden = true;
-  localStorage.setItem('pwa_installed', 'yes');
-});
-
-// Load history initially
-renderHistory();
 </script>
 </body>
 </html>
