--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ button:disabled { opacity: .6; cursor: not-allowed; }
 <body>
 
 <header>
-  <img src="./icon-192.png?v=3" alt="" width="28" height="28" style="border-radius:6px" />
+  <img src="./icon-192.jpg?v=3" alt="" width="28" height="28" style="border-radius:6px" />
   <h1>YouTube PWA Player</h1>
 </header>
 
