--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@ button:disabled{opacity:.6;cursor:not-allowed;}
 .title-scroll span{display:inline-block;padding-left:100%;animation:scrollTitle 10s linear infinite;}
 @keyframes scrollTitle{0%{transform:translateX(0);}100%{transform:translateX(-100%);}}
 </style>
+  <script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker
+    .register("./service-worker.js")
+    .then((reg) => console.log("Service worker registered:", reg))
+    .catch((err) => console.log("Service worker not registered:", err));
+}
+  </script>
 </head>
 <body>
 
